# dstimer

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  build.rs  demo_args_1.tape  demo_args_2.tape  demo_inline_args_1.tape  demo_inline_args_2.tape  install.ps1  install.sh
.github/workflows/: release.yml  update-homebrew.yml  update-scoop.yml
src/: audio.rs  config.rs  main.rs  render.rs
