[package]
name = "dstimer"
version = "1.0.2"
edition = "2021"
description = "A dead-simple, cross-platform CLI countdown timer with color-changing progress bar and optional audio playback"
license = "MIT"
repository = "https://github.com/madLinux7/dead-simple-cli-timer"
homepage = "https://grolmes.de"
keywords = ["cli", "timer", "countdown", "tui", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

[build-dependencies]
winresource = "0.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
rodio = { version = "0.17", default-features = false, features = [
    "symphonia-all",
] }
ctrlc = "3.4"
[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
