[package]
name = "dstimer"
version = "1.1.0"
edition = "2021"
description = "The Timer for CLI people"
license = "MIT"
repository = "https://github.com/madLinux7/dstimer"
homepage = "https://grolmes.de"
keywords = ["cli", "timer", "countdown", "tui", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

[build-dependencies]
winresource = "0.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
rodio = { version = "0.17", default-features = false, features = [
    "symphonia-all",
] }
ctrlc = "3.4"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
